--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-# api key
-/config
-key.js
 
 # testing
 /coverage
@@ -24,3 +21,5 @@ key.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.env
